<resources>
    <string name="app_name">helper</string>
    <string name="register_head">REGISTER NOW</string>
    <string name="username_head">Username</string>
    <string name="password_head">Password</string>
    <string name="register_btn">REGISTER</string>
    <string name="ask_to_login">Already have an Account?</string>
    <string name="go_to_login">Login</string>
    <string name="login_head">LOGIN</string>
    <string name="ask_to_register">New User?</string>
    <string name="go_to_register">Register</string>
    <string name="contact_btn">CONTACTS</string>
    <string name="worker_btn">FIND A WORKER</string>
    <string name="notification_btn">REMEMBER YOUR APPOINTMENT</string>
    <string name="donate_btn">MEDITATE WITH MUSIC</string>
    <string name="emergency">EMERGENCY?</string>
    <string name="logout">LogOut</string>
    <string name="phone_no">PhoneNo</string>
    <string name="state_name">State</string>
    <string name="city_name">City</string>
    <string name="address">Complete Address</string>
    <string name="guardian_name">Guardian Name</string>
    <string name="guardian_phone">Guardian PhoneNo</string>
    <string name="ask_enter_all_fields">Please enter all the feilds</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="wrong_password">Wrong password!!</string>
    <string name="user_not_found">USER NOT FOUND!!</string>
    <string name="contact_head">MY CONTACTS</string>
    <string name="new_contact">NEW CONTACT</string>
    <string name="house_help">House Help</string>
    <string name="plumber">Plumber</string>
    <string name="electrician">Electrician</string>
    <string name="caretaker">Care Taker</string>
    <string name="cook">Cook</string>
    <string name="driver">Driver</string>
    <string name="call_now">CALL NOW</string>
    <string name="delete_contact">DELETE CONTACT</string>
    <string name="click_photo">Click Photo</string>
    <string name="save">Save</string>
    <string name="get_worker">Get A Worker Now!!</string>
    <string name="available">AVAILABLE</string>
    <string name="reserved">RESERVED</string>
    <string name="ask_before_delete">Are you sure you want to delete this data?</string>
    <string name="say_yes">YES</string>
    <string name="say_no">NO</string>
    <string name="deleted">Contact deleted Successfully!!</string>
    <string name="no_delete">Deletion Of Contact Suspended!!</string>
    <string name="book_worker">Worker booked successfully!! </string>
    <string name="call_now_worker">You can now directly talk to them by pressing the call icon</string>
    <string name="task_complete">Task Completed successfully!!</string>
    <string name="valid_number">Please enter valid number</string>
    <string name="already_exist">Number already exists</string>
    <string name="name_in_use">Name already in use</string>
    <string name="save_contact">Contact saved successfully!!</string>
    <string name="register_success">You are successfully registered!!</string>
    <string name="my_details">MY DETAILS</string>
    <string name="emergency_call">EMERGENCY CALL</string>
    <string name="music_top">Experience the joyous state of meditation</string>
    <string name="song_select">SELECT YOUR GENRE</string>
    <string name="english">ENGLISH</string>
    <string name="hindi">HINDI</string>
    <string name="marathi">MARATHI</string>
    <string name="bengali">BENGALI</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="free_worker_msg">Free the worker only after complete work is done</string>
    <string name="free_the_worker">FREE THE WORKER</string>
    <string name="replacement">find a replacement</string>
    <string name="type_event">Type Event</string>
    <string name="event"> events</string>
    <string name="no_contact">No Contacts Present.. Create a new One!!</string>
    <string name="press">Press On the date to store an event!!</string>
    <string name="check_event">Long press to see the stored events</string>
    <string name="rest_assured">Rest assured.. We work with trusted workers only!!</string>
    <string name="careing">Caring for those who once cared for us</string>
    <string name="book_wo">Book Worker</string>
    <string name="add_event">Add Event</string>
    <string name="alarm_me">Alarm Me</string>
</resources>