<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactPage">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#8BC34A"
        android:paddingTop="25dp"
        android:text="@string/contact_head"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />

    <GridView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="610dp"
        android:numColumns="2">


</GridView>
    <TextView
        android:id="@+id/no_contact_present"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:padding="20sp"
        android:text="@string/no_contact"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnFinal"
        android:layout_width="192dp"
        android:layout_height="67dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_btn"
        android:elevation="2dp"
        android:text="@string/new_contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />


</LinearLayout>