<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6000000"
    android:orientation="vertical">

    <EditText
        android:id="@+id/events_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/round_btn"
        android:gravity="center"
        android:hint="@string/type_event"
        android:inputType="textShortMessage"
        android:textColor="#000000"
        android:textColorHint="#494343" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/seteventtime"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/baseline_punch_clock_24"
            android:elevation="3dp"

            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/eventtime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="00:00 AM"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/alarm_me"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/white"
            android:text="@string/alarm_me"
            android:textColor="@color/white" />


    </LinearLayout>

    <Button
        android:id="@+id/addevent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"

        android:backgroundTint="#8BC34A"
        android:text="@string/add_event"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold" />

</LinearLayout>